# stt-server

./: .gitignore  .semgrep.yml  CHANGELOG.md  Dockerfile  README.md  audio.go  audio_test.go  download-model.sh  go.mod  go.sum  logging.go  logging_test.go  main.go  metrics.go  model.go  model_test.go  recognizer.go  server.go  server_test.go  tracing.go  wav.go
.githooks/: pre-commit
.github/workflows/: build.yml
cmd/stt-server/: main.go
docs/adr/: 001-openai-api-compatibility.md  002-unsupported-openai-params.md  003-queue-and-rate-limiting.md
e2e/: docker-compose.yaml  litellm-config.yaml  scrape.yaml
internal/audio/: decode.go  decode_test.go  format_validation_test.go
internal/config/: config.go  version.go
internal/model/: resolve.go  resolve_test.go
internal/observe/: logging.go  logging_test.go  metrics.go  tracing.go
internal/recognizer/: detect.go  engine.go  pool.go  recognizer.go
internal/recognizer/remote/: engine.go
internal/recognizer/remote/sttpb/: stt.pb.go  stt_grpc.pb.go
internal/recognizer/sherpa/: detect.go  engine.go
internal/server/: formats.go  formats_test.go  handlers.go  handlers_integration_test.go  handlers_test.go  middleware.go  server.go
proto/: stt.proto
scripts/: check-deps.sh  test-e2e.sh
tools/inference-server/: audio.py  decode.py  pyproject.toml  server.py  stt_pb2.py  stt_pb2_grpc.py
