[project]
name = "stt-inference-server"
version = "0.1.0"
description = "Reference gRPC inference server for stt-server remote backend"
requires-python = ">=3.10"
dependencies = [
    "grpcio>=1.68.0",
    "grpcio-tools>=1.68.0",
    "protobuf>=5.29.0",
    "numpy>=1.26.0",
]

[project.optional-dependencies]
torch = ["torch>=2.0.0"]
nemo = ["nemo_toolkit[asr]>=2.0.0"]
poptorch = ["huggingface-hub>=0.20.0", "safetensors>=0.4.0"]

[project.scripts]
stt-inference-server = "server:main"
